force-app/main/default/objects/Calculation_Inputs__c/Calculation_Inputs__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Calculation Inputs</label>
</CustomObject>