force-app/main/default/objects/Calculation_Inputs__c/fields/Growth_Rate__c.field-meta.xml
<CustomField>
    <fullName>Growth_Rate__c</fullName>
    <defaultValue>-0.0017</defaultValue>
    <description>Growth rate for the years in business gompers function.  Original value was -0.0017.  It must be a negative value.</description>
    <inlineHelpText>Growth rate for the years in business gompers function.  Original value was -0.0017.  It must be a negative value.</inlineHelpText>
    <label>Growth Rate</label>
    <precision>12</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>