force-app/main/default/objects/Calculation_Inputs__c/fields/PUC_Complaint_Scorecard_weighting__c.field-meta.xml
<CustomField>
    <fullName>PUC_Complaint_Scorecard_weighting__c</fullName>
    <defaultValue>0.20</defaultValue>
    <description>What percentage of the TrueCost customer satisfaction ranking comes from the PUC scorecard scores?</description>
    <inlineHelpText>What percentage of the TrueCost customer satisfaction ranking comes from the PUC scorecard scores?</inlineHelpText>
    <label>PUC Complaint Scorecard weighting</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>