force-app/main/default/objects/Calculation_Inputs__c/fields/REP_Rating_Reference__c.field-meta.xml
<CustomField>
    <fullName>REP_Rating_Reference__c</fullName>
    <defaultValue>4</defaultValue>
    <description>For the 1-5 star ratings of REPs, what is considered neutral (ratings above this number increase rank; ratings below decrease rank);</description>
    <inlineHelpText>For the 1-5 star ratings of REPs, what is considered neutral (ratings above this number increase rank; ratings below decrease rank);</inlineHelpText>
    <label>REP_Rating_Reference</label>
    <precision>3</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>