force-app/main/default/objects/Calculation_Inputs__c/fields/X_Displacement__c.field-meta.xml
<CustomField>
    <fullName>X_Displacement__c</fullName>
    <defaultValue>-5</defaultValue>
    <description>X displacement for the years in business gompers function.  It must be negative, and the original value was -5.</description>
    <inlineHelpText>X displacement for the years in business gompers function.  It must be negative, and the original value was -5.</inlineHelpText>
    <label>X Displacement</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>